language/move-lang/tests/move_check/parser/function_type_missing_angle.exp
error[E01002]: unexpected token
  ┌─ tests/move_check/parser/function_type_missing_angle.move:3:19
  │
3 │     fun fn<T1, T2 () { }
  │           -       ^ Expected '>'
  │           │        
  │           To match this '<'

